testsuite/poke.pkl/sl-diag-2.pk
/* { dg-do compile } */

var i = (1 as int<13>) <<. (12 + 1); /* { dg-error "too big" } */
